<resources>
    <string name="app_name" translatable="false">eFarmers</string>

    <string name="text_hindi" translatable="false">हिंदी</string>
    <string name="text_english" translatable="false">English</string>
    <string name="text_bangla" translatable="false">" বাংলা "</string>

    <string name="action_settings">Settings</string>


    <string name="my_products">My Products</string>
    <string name="my_profile">My Profile</string>
    <string name="orders">Orders</string>
    <string name="crops">Agriculture Info</string>
    <string name="add_products">Add Products</string>
    <string name="logout">Logout </string>
    <string name="welcome">Welcome ! </string>
    <string name="name">Farmers Name :</string>
    <string name="cell">Phone Number :</string>
    <string name="location">Location :</string>
    <string name="password">Password:</string>
    <string name="edit">Edit </string>
    <string name="gender">Gender :</string>
    <string name="farmer">Farmer  </string>
    <string name="update_profile">Update Profile</string>
    <string name="information">Information </string>
    <string name="product_name">Product Name </string>

    <string name="category">Category </string>
    <string name="price">Price Per KG</string>
    <string name="description">Description </string>
    <string name="choose_image">Choose Image</string>
    <string name="submit">Submit</string>
    <string name="order_information">Order Information</string>
    <string name="order_id">Order ID</string>
    <string name="quantity">Quantity</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="time_date">Time Date</string>

    <string name="full_address">Full Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="order_status">Order Status</string>
    <string name="payment_method">Payment Method</string>
    <string name="call_retailer">Call Retailer</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="govt_notice">Govt Notice</string>
    <string name="stock_in_kg">Stock In KG</string>

</resources>
