<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".farmers.products.OrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/order_information"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txt_order_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/order_id"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/product_name" />

            <TextView
                android:id="@+id/txt_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:padding="16dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/txt_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:padding="16dp"
                android:text="Tk.00"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/txt_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_border"
                android:padding="16dp"
                android:text="10 KG"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/shipping_information"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txt_time_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/time_date" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/full_address" />

            <TextView
                android:id="@+id/txt_full_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/full_address" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/payment_methods"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txt_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:text="@string/payment_method" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/order_status"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txt_order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:text="@string/payment_method" />

            <TextView
                android:id="@+id/txt_call_retailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/call_retailer"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txt_confirm_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/confirm_order"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txt_cancel_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel_order"
                android:textColor="#fff" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>