<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".farmers.products.AddProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:text="@string/product_name" />

            <EditText
                android:id="@+id/etxt_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:hint="@string/product_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:text="@string/category" />

            <EditText
                android:id="@+id/etxt_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_border"
                android:drawableRight="@drawable/ic_arrow_down"
                android:focusable="false"
                android:hint="@string/category"
                android:inputType="text"

                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:text="@string/stock_in_kg" />

            <EditText
                android:id="@+id/etxt_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_border"
                android:drawableRight="@drawable/ic_arrow_down"
                android:hint="@string/stock_in_kg"
                android:inputType="number"

                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:text="@string/price" />

            <EditText
                android:id="@+id/etxt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:text="@string/description" />

            <EditText
                android:id="@+id/etxt_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_choose_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"

                android:layout_marginRight="40dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/choose_image"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/image_placeholder" />

            <TextView
                android:id="@+id/txt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"

                android:layout_marginRight="40dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>